--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,7 @@ python:
 - '3.3'
 - '3.4'
 install:
-- pip install -r requirements.txt --use-mirrors
+  - pip install requests six iso8601 uritemplate --use-mirrors
+  - python setup.py install
+script:
+  - python -W always setup.py test
